--- a/TOneV2/Code/TOneV2/TOne.Data.SQL/TOne.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Data.SQL/TOne.Data.SQL.csproj
@@ -67,11 +67,16 @@
     <Compile Include="BusinessEntityDataManager.cs" />
     <Compile Include="GenericEntityDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecurityDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TABS\TABS.csproj">
       <Project>{53916714-C501-4613-907F-D5F33B78C3F0}</Project>
       <Name>TABS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.Business\TOne.Business.csproj">
+      <Project>{cab55227-6fda-4012-8a59-168ad30f96d2}</Project>
+      <Name>TOne.Business</Name>
     </ProjectReference>
     <ProjectReference Include="..\TOne.Data\TOne.Data.csproj">
       <Project>{AC26C25E-A2BF-4F95-9070-8A910FDA5989}</Project>
