--- a/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
@@ -103,7 +103,12 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TABS.Addons.Utilities">
+    <Reference Include="TABS, Version=1.0.5616.17168, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Resources\DLLs\TABS.dll</HintPath>
+    </Reference>
+    <Reference Include="TABS.Addons.Utilities, Version=1.0.5445.31653, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Resources\DLLs\TABS.Addons.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Caching">
@@ -126,10 +131,6 @@
     <Compile Include="ConfigParameterManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TABS\TABS.csproj">
-      <Project>{53916714-C501-4613-907F-D5F33B78C3F0}</Project>
-      <Name>TABS</Name>
-    </ProjectReference>
     <ProjectReference Include="..\TOne.Caching\TOne.Caching.csproj">
       <Project>{1950B29A-5C7B-47A3-8113-FC9211D27CFD}</Project>
       <Name>TOne.Caching</Name>
