--- a/TOneV2/Code/TOneV2/TOne.CDR.Data/TOne.CDR.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Data/TOne.CDR.Data.csproj
@@ -44,7 +44,12 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TABS.Addons.Utilities">
+    <Reference Include="TABS, Version=1.0.5613.28447, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Resources\DLLs\TABS.dll</HintPath>
+    </Reference>
+    <Reference Include="TABS.Addons.Utilities, Version=1.0.5445.31653, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Resources\DLLs\TABS.Addons.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Common">
@@ -60,10 +65,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TABS\TABS.csproj">
-      <Project>{53916714-c501-4613-907f-d5f33b78c3f0}</Project>
-      <Name>TABS</Name>
-    </ProjectReference>
     <ProjectReference Include="..\TOne.CDR.Entities\TOne.CDR.Entities.csproj">
       <Project>{33bba8af-e925-4354-b05c-39e623a21da9}</Project>
       <Name>TOne.CDR.Entities</Name>
