added VRNotifationService and updated documentation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23025

--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -107,6 +107,8 @@
     <Compile Include="CacheObjectType.cs" />
     <Compile Include="GenericEntity.cs" />
     <Compile Include="GenericEntityStatus.cs" />
+    <Compile Include="OperationResults\InsertOperationOutput.cs" />
+    <Compile Include="OperationResults\UpdateOperationOutput.cs" />
     <Compile Include="Security\SecureActionAttribute.cs" />
     <Compile Include="Security\AuthenticationOutput.cs" />
     <Compile Include="CodeList.cs" />
