--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -235,7 +235,7 @@
     <Content Include="Client\Javascripts\Services\base-dir-service.js" />
     <Content Include="Client\Javascripts\Directives\Button\button-dir-service.js" />
     <Content Include="Client\Javascripts\Services\CarrierTypeEnum.js" />
-    <Content Include="Client\Javascripts\Services\ModalService\vr-confirmation-modal.html" />
+    <Content Include="Client\Javascripts\Services\NotificationService\vr-confirmation-modal.html" />
     <Content Include="Client\Javascripts\Services\ModalService\vr-modal-service.html" />
     <Content Include="Client\Javascripts\Services\ModalService\vr-modal-service.js" />
     <Content Include="Client\Javascripts\Services\multitransclude-service.js" />
@@ -245,6 +245,7 @@
     <Content Include="Client\Javascripts\Services\main-service.js" />
     <Content Include="Client\Javascripts\Directives\Inputs\Textbox\textbox-dir-service.js" />
     <Content Include="Client\Javascripts\Services\NavigationService\vr-navigation-service.js" />
+    <Content Include="Client\Javascripts\Services\NotificationService\vr-notification-service.js" />
     <Content Include="Client\Javascripts\Services\utils-service.js" />
     <Content Include="Client\Javascripts\Directives\Inputs\Validation\validation-dir-service.js" />
     <Content Include="Client\Javascripts\Services\zone-service.js" />
