git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23037

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Enums.cs" />
     <Compile Include="IAggregate.cs" />
     <Compile Include="NumberCriteriaBatch.cs" />
-    <Compile Include="NormalCDR.cs" />
+    <Compile Include="CDR.cs" />
     <Compile Include="NumberProfileBatch.cs" />
     <Compile Include="NumberProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
