--- a/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
@@ -126,9 +126,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtCodeMap.cs" />
     <Compile Include="ProtPricingGenerator.cs" />
+    <Compile Include="RandomPasswordHelper.cs" />
     <Compile Include="SecurityManager.cs" />
     <Compile Include="SharedQueueManager.cs" />
     <Compile Include="ConfigParameterManager.cs" />
+    <Compile Include="UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TOne.Caching\TOne.Caching.csproj">
