--- a/TOneV2/Code/TOneV2/TOne.Data.SQL/TOne.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Data.SQL/TOne.Data.SQL.csproj
@@ -73,6 +73,7 @@
     <Compile Include="GenericEntityDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityDataManager.cs" />
+    <Compile Include="UserDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TOne.Business\TOne.Business.csproj">
