--- a/TOneV2/Code/TOneV2/TOne.Data/TOne.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Data/TOne.Data.csproj
@@ -111,6 +111,7 @@
     <Compile Include="IBusinessEntityDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="ISecurityDataManager.cs" />
+    <Compile Include="IUserDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
