--- a/TOneV2/Code/TOneV2/TOne.Web/Web.config
+++ b/TOneV2/Code/TOneV2/TOne.Web/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$" />
+    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$" />-->
+      <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
     <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=NetTalkForDev;User ID=Development;Password=dev!123" />-->
     <add name="BIConnectionString" connectionString="Provider=MSOLAP;Data Source = http://192.168.110.185:1214/msmdpump.dll; Initial Catalog = BISLTOneDay_3Years; User Id = vanrise\olap.access; Password = 0l@p@cce$$" />
     <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=ToneSpactronNew_routing_{0};user id=development;password=dev!123"/>
