--- a/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis/App.Config
+++ b/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis/App.Config
@@ -5,15 +5,15 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-   <!-- <add name="CDRAnalysisMobileConnectionString" connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile_WF;User ID=walid;Password=P@ssw0rd;;MultipleActiveResultSets=True;Application Name=EntityFramework"
-       providerName="System.Data.SqlClient" />
-    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;server=192.168.110.185;User ID=walid;Password=P@ssw0rd;;persistsecurityinfo=True;database=CDRAnalysisMobile_WF&quot;"
-      providerName="System.Data.EntityClient" />-->
-
+    <add name="CDRAnalysisMobileConnectionString" connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile_WF;User ID=walid;Password=P@ssw0rd;MultipleActiveResultSets=True;Application Name=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;server=192.168.110.185;User ID=walid;Password=P@ssw0rd;persistsecurityinfo=True;database=CDRAnalysisMobile_WF&quot;"
+      providerName="System.Data.EntityClient" />
+    <!--
     <add name="CDRAnalysisMobileConnectionString" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF"
       providerName="MySql.Data.MySqlClient" />
     <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF&quot;"
-     providerName="System.Data.EntityClient" />
+     providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
