Added vr-choices directives
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23057

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -227,6 +227,8 @@
     <Content Include="Client\Javascripts\Directives\Inputs\Validation\vr-validation.js" />
     <Content Include="Client\Javascripts\Directives\Pagination\vr-pagination-directive.js" />
     <Content Include="Client\Javascripts\Directives\Pagination\vr-pagination.html" />
+    <Content Include="Client\Javascripts\Directives\Inputs\Choices\vr-choice-directive.js" />
+    <Content Include="Client\Javascripts\Directives\Inputs\Choices\vr-choices-directive.js" />
     <Content Include="Client\Javascripts\Modules\appControllers.js" />
     <Content Include="Client\Javascripts\Modules\mainModule.js" />
     <Content Include="Client\Javascripts\Modules\appRouting.js" />
