adding and updating methods for TOne Mobile (IDS)
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23067

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data/TOne.BusinessEntity.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data/TOne.BusinessEntity.Data.csproj
@@ -52,7 +52,7 @@
     <Compile Include="ICommissionDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="IRateDataManager.cs" />
-    <Compile Include="IServiceDataManager.cs" />
+    <Compile Include="IFlaggedServiceDataManager.cs" />
     <Compile Include="ISwitchDataManager.cs" />
     <Compile Include="ITariffDataManager.cs" />
     <Compile Include="IToDConsiderationDataManager.cs" />
