--- a/TOneV2/Code/TOneV2/TOne.Analytics.Data.SQL/TOne.Analytics.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Data.SQL/TOne.Analytics.Data.SQL.csproj
@@ -62,6 +62,10 @@
       <Project>{d23495a3-bf94-4a57-973d-8b3b384fc0a8}</Project>
       <Name>TOne.Analytics.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.BusinessEntity.Entities\TOne.BusinessEntity.Entities.csproj">
+      <Project>{70ce755d-00ae-4e12-8f07-e4df91346293}</Project>
+      <Name>TOne.BusinessEntity.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.Data.SQL\TOne.Data.SQL.csproj">
       <Project>{f0bcbe72-f000-46ae-85a4-79155751c767}</Project>
       <Name>TOne.Data.SQL</Name>
