--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Business/TOne.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Business/TOne.BusinessEntity.Business.csproj
@@ -53,7 +53,7 @@
     <Compile Include="PricingGeneratorManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateManager.cs" />
-    <Compile Include="ServiceManager.cs" />
+    <Compile Include="FlaggedServiceManager.cs" />
     <Compile Include="SwitchManager.cs" />
     <Compile Include="ZoneManager.cs" />
   </ItemGroup>
