--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CodeGroupInfo.cs" />
     <Compile Include="FlaggedService.cs" />
     <Compile Include="IBusinessEntityInfoManager.cs" />
+    <Compile Include="IFlaggedServiceEntity.cs" />
     <Compile Include="IZoneSupplied.cs" />
     <Compile Include="SupplierCodes.cs" />
     <Compile Include="Commission.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rate.cs" />
     <Compile Include="SuppliersCodes.cs" />
+    <Compile Include="Switch.cs" />
     <Compile Include="SwitchInfo.cs" />
     <Compile Include="Tariff.cs" />
     <Compile Include="ToDConsideration.cs" />
