--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/Vanrise.Fzero.DevRuntime.csproj
@@ -142,6 +142,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ITask.cs" />
+    <Compile Include="WF.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WF.Designer.cs">
+      <DependentUpon>WF.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +162,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="WF.resx">
+      <DependentUpon>WF.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
