--- a/TOneV2/Code/TOneV2/TOne.Main.Web/TOne.Main.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Main.Web/TOne.Main.Web.csproj
@@ -124,6 +124,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Client\Services\APIServices\UsersAPIService.js" />
+    <Content Include="Client\Views\ResetPasswordEditorController.js" />
+    <Content Include="Client\Views\ResetPasswordEditor.html" />
     <Content Include="Client\Views\UserEditor.html" />
     <Content Include="Client\Views\UserManagement.html" />
     <Content Include="Client\Views\UserManagementController.js" />
