--- a/CLITester/AndroitTest/AndroitTest.csproj
+++ b/CLITester/AndroitTest/AndroitTest.csproj
@@ -128,6 +128,12 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CallGeneratorLibrary\CallGeneratorLibrary.csproj">
+      <Project>{ed9e2ece-db3a-41ee-8ebc-efae2175a8c3}</Project>
+      <Name>CallGeneratorLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
