--- a/CLITester/CLITesterSite/Web.config
+++ b/CLITester/CLITesterSite/Web.config
@@ -27,12 +27,13 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
     <add key="ExpiryTimeRequestCall" value="70"/>
     <!-- in seconds -->
-    <add key="SmtpServer" value="mail.ids.com.lb"/>
     <add key="ConfirmPage" value="http://localhost:2723/MoaWeb/ConfirmRegistration.aspx"/>
     <add key="ResetPasswordLink" value="http://localhost:2723/MoaWeb/ResetPassword.aspx"/>
-    <add key="SendingEmail" value="h.hawi@ids.com.lb"/>
     <add key="ProjectsResources" value="./Resources/"/>
     <add key="ExtensionsResources" value="../Resources/"/>
+
+    <add key="SendingEmail" value="vanrise.clitester@gmail.com" />
+    <add key="SmtpServer" value="smtp.gmail.com" />
   </appSettings>
   <system.serviceModel>
     <bindings>
