--- a/CLITester/CallGeneratorLibrary/CallGeneratorLibrary.csproj
+++ b/CLITester/CallGeneratorLibrary/CallGeneratorLibrary.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Models\LookupValue.cs" />
     <Compile Include="Models\Operator.cs" />
     <Compile Include="Models\Schedule.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -98,6 +99,7 @@
     <Compile Include="Repositories\LookupValueRepository.cs" />
     <Compile Include="Repositories\MontyCallRepository.cs" />
     <Compile Include="Repositories\OperatorRepository.cs" />
+    <Compile Include="Repositories\PhoneNumberRepository.cs" />
     <Compile Include="Repositories\RoleRepository.cs" />
     <Compile Include="Repositories\ScheduleGroupRepository.cs" />
     <Compile Include="Repositories\ScheduleLogRepository.cs" />
@@ -108,6 +110,7 @@
     <Compile Include="Repositories\TestNumberGroupRepository.cs" />
     <Compile Include="Repositories\TestNumberRepository.cs" />
     <Compile Include="Repositories\TestOperatorRepository.cs" />
+    <Compile Include="Repositories\UserBalanceRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="Utilities\ActionClass.cs" />
     <Compile Include="Utilities\Config.cs" />
