Enhanced UI base
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23135

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -200,6 +200,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
+    <Content Include="Client\Javascripts\Constants\UpdateOperationResultEnum.js" />
+    <Content Include="Client\Javascripts\Constants\InsertOperationResultEnum.js" />
     <Content Include="Client\Javascripts\Constants\ValidationMessagesEnum.js" />
     <Content Include="Client\Javascripts\Controllers\ChartPrototypes\AMChartController.js" />
     <Content Include="Client\Javascripts\Controllers\ChartPrototypes\CanvasJSChartController.js" />
