--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -15,7 +15,7 @@
           <section name="roleService" type="System.Web.Configuration.ScriptingRoleServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
         </sectionGroup>
       </sectionGroup>
-    </sectionGroup>
+    </sectionGroup> 
     <section name="vanriseLogging" type="Vanrise.Common.LoggingConfiguration.LoggingConfig, Vanrise.Common" />
   </configSections>
 
@@ -34,17 +34,17 @@
   </vanriseLogging>
   <connectionStrings>
     <!--<add name="MainDBConnString" connectionString="Server=192.168.18.6;Database=TOneDemoNew;User ID=sa;Password=password"/>-->
-    <add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$"/>
+    <add name="MainDBConnString" connectionString="Server=192.168.110.190;Database=MVTSProDemo;User ID=sa;Password=QC@cce$$"/>
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>-->
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
-    <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
+    <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB2;Data Source=."/>
     <add name="QueueItemDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneQueueDB;Data Source=."/>
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>
     <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneDevTest01_routing_{0};Data Source=."/>-->
     <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneSpactronNew_routing_{0};user id=development;password=dev!123"/>-->
-    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=ToneSpactronNew_routing_{0};user id=development;password=dev!123"/>
+    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.190;Initial Catalog=MVTSProDemo_{0};user id=sa;password=QC@cce$$"/>
     <!--<add name="WFPersistence" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFPersistence;Data Source=."/>-->
   </connectionStrings>
 
@@ -186,6 +186,8 @@
     <add key="BusinessProcessDisabledNamedPipeService" value="true"/>
     <add key="RepricingParallelThreads" value="5"/>
     <add key="RoutingCodePrefixLength" value="2"/>
+    <add key="BCPDonotDeleteFiles" value="true"/>
+    
   </appSettings>
   <system.codedom>
     <compilers>
