--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
@@ -58,6 +58,7 @@
     <Compile Include="AggregateDefinition.cs" />
     <Compile Include="AverageAggregate.cs" />
     <Compile Include="Condition.cs" />
+    <Compile Include="ConsecutiveAggregate.cs" />
     <Compile Include="SumAggregate.cs" />
     <Compile Include="DistinctCountAggregate.cs" />
     <Compile Include="CriteriaDefinition.cs" />
