Refactore classes BillingStatistic
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23165

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Data/TOne.Analytics.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Data/TOne.Analytics.Data.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyticsDataManagerFactory.cs" />
+    <Compile Include="IBillingStatisticDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="IAnalyticsDataManager.cs" />
     <Compile Include="ITrafficStatisticDataManager.cs" />
