--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.MySQL/Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.MySQL/Vanrise.Fzero.FraudAnalysis.Data.MySQL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="MySQLManager.cs" />
     <Compile Include="NumberProfileDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PredefinedDataManager.cs" />
     <Compile Include="StrategyDataManager.cs" />
     <Compile Include="SuspiciousNumberDataManager.cs" />
   </ItemGroup>
