--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.SQL/Vanrise.Fzero.FraudAnalysis.Data.SQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data.SQL/Vanrise.Fzero.FraudAnalysis.Data.SQL.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="NumberProfileDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PredefinedDataManager.cs" />
     <Compile Include="StrategyDataManager.cs" />
     <Compile Include="SuspiciousNumberDataManager.cs" />
   </ItemGroup>
