--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data/Vanrise.Fzero.FraudAnalysis.Data.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Data/Vanrise.Fzero.FraudAnalysis.Data.csproj
@@ -49,6 +49,7 @@
     <Compile Include="FraudDataManagerFactory.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="INumberProfileDataManager.cs" />
+    <Compile Include="IPredefinedDataManager.cs" />
     <Compile Include="IStrategyDataManager.cs" />
     <Compile Include="ISuspiciousNumberDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
