--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
@@ -59,6 +59,7 @@
     <Compile Include="AverageAggregate.cs" />
     <Compile Include="Condition.cs" />
     <Compile Include="ConsecutiveAggregate.cs" />
+    <Compile Include="CallClass.cs" />
     <Compile Include="SumAggregate.cs" />
     <Compile Include="DistinctCountAggregate.cs" />
     <Compile Include="CriteriaDefinition.cs" />
