--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
@@ -120,12 +120,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BusinessEntityController.cs" />
-    <Compile Include="Controllers\SwitchManagementController.cs" />
+    <Compile Include="Controllers\SwitchController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Client\Services\APIServices\BusinessEntityAPIService.js" />
     <Content Include="Client\Services\APIServices\SwitchManagmentAPIService.js" />
+    <Content Include="Client\Views\SwitchEditor.html" />
+    <Content Include="Client\Views\SwitchEditorController.js" />
     <Content Include="Client\Views\SwitchManagment.html" />
     <Content Include="Client\Views\SwitchManagmentController.js" />
     <Content Include="Client\Views\SwitchsController.js" />
