User + Role Manager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23175

--- a/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
@@ -127,6 +127,7 @@
     <Compile Include="ProtCodeMap.cs" />
     <Compile Include="ProtPricingGenerator.cs" />
     <Compile Include="RandomPasswordHelper.cs" />
+    <Compile Include="RoleManager.cs" />
     <Compile Include="SecurityManager.cs" />
     <Compile Include="SharedQueueManager.cs" />
     <Compile Include="ConfigParameterManager.cs" />
