--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Entities/Vanrise.Fzero.FraudAnalysis.Entities.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Condition.cs" />
     <Compile Include="ConsecutiveAggregate.cs" />
     <Compile Include="CallClass.cs" />
+    <Compile Include="GroupCountAggregate.cs" />
     <Compile Include="SumAggregate.cs" />
     <Compile Include="DistinctCountAggregate.cs" />
     <Compile Include="CriteriaDefinition.cs" />
