adding CarrierAccount class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23195

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CarrierAccount.cs" />
     <Compile Include="CarrierAccountInfo.cs" />
     <Compile Include="CarrierInfo.cs" />
     <Compile Include="Code.cs" />
