--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
@@ -14,8 +14,8 @@
     <add name="CDRDBConnectionStringMySQL" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF"  providerName="MySql.Data.MySqlClient" />
 
     <!-- <add name="CDRDBConnectionString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile;User ID=zahraa;Password=p@ssw0rd;"            providerName="System.Data.SqlClient" />
-    <add name="CDRDBConnectionStringMySQL" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile"  providerName="MySql.Data.MySqlClient" />-->
-    
+    <add name="CDRDBConnectionStringMySQL" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile"  providerName="MySql.Data.MySqlClient" />
+    -->
   </connectionStrings>
 
     
