--- a/CDRAnalysis/Dependencies/Resources.csproj
+++ b/CDRAnalysis/Dependencies/Resources.csproj
@@ -77,6 +77,7 @@
     <Content Include="Libraries\Telerik.Web.UI.dll" />
     <Content Include="Libraries\Telerik.Web.UI.xml" />
     <Content Include="Libraries\Vanrise.CommonLibrary.dll" />
+    <Content Include="Notes\Web Virtual Directories.txt" />
     <Content Include="VanriseFramework\Vanrise.BusinessProcess.Client.dll" />
     <Content Include="VanriseFramework\Vanrise.BusinessProcess.Data.dll" />
     <Content Include="VanriseFramework\Vanrise.BusinessProcess.Data.SQL.dll" />
