--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/TOne.Analytics.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/TOne.Analytics.Web.csproj
@@ -117,12 +117,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AnalyticsController.cs" />
+    <Compile Include="Controllers\BillingStatisticsController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Analytics\Constants\TrafficStatisticGroupKeysEnum.js" />
     <Content Include="Analytics\Constants\TrafficStatisticsMeasureEnum.js" />
     <Content Include="Analytics\Services\APIServices\AnalyticsAPIService.js" />
+    <Content Include="Analytics\Services\APIServices\BillingStatisticsAPIService.js" />
+    <Content Include="Analytics\Views\BillingStatistics\VariationReports.html" />
+    <Content Include="Analytics\Views\BillingStatistics\VariationReportsController.js" />
     <Content Include="Analytics\Views\CDR\CDRReport.html" />
     <Content Include="Analytics\Views\Traffic Statistics\TrafficStatisticsGrid.html" />
     <Content Include="Analytics\Views\Traffic Statistics\TrafficStatisticsGridController.js" />
