Open Entity Report Result from BI chart/report directives
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23249

--- a/TOneV2/Code/TOneV2/TOne.BI.Web/TOne.BI.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/TOne.BI.Web.csproj
@@ -135,6 +135,8 @@
     <Content Include="Client\Views\Dashboards\ZoneDashboardController.js" />
     <Content Include="Client\Views\Reports\EntityReport.html" />
     <Content Include="Client\Views\Reports\EntityReportController.js" />
+    <Content Include="Client\Views\Reports\EntityReportTemplates\EntityReportResult.html" />
+    <Content Include="Client\Views\Reports\EntityReportTemplates\EntityReportResultController.js" />
     <Content Include="Client\Views\Reports\ZoneDetailsController.js" />
     <Content Include="Client\Views\Reports\ZoneSummaryController.js" />
     <Content Include="Client\Services\bi-utilities-service.js" />
